<resources>
    <string name="app_name">Homework6 Nurgazy</string>
    <string name="entrance">Вход</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="enter_or_register">Выполните вход\nили зарегистрируйтесь.</string>
    <string name="enter_your_email">Введите вашу почту</string>
    <string name="enter_your_password">Введите пароль</string>
    <string name="enter">Войти</string>
    <string name="forgot_password">Забыл пароль?</string>
</resources>